2002-10-29  Masatake YAMATO  <yamato@redhat.com>

	* input-magick.c (input_magick_reader): Do DestroyImage
	before DestroyImageInfo.

	* main.c (main): Put a space in a message(inputformat).
	(read_command_line): Fix a typo.

2002-10-26  Ralf Stubner <ralf.stubner@physik.uni-erlangen.de>

	* autotrace.c: #include "output-pstoedit.h"
	with ifdef. 

2002-10-24  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: version 0.31.0.

2002-10-24  Martin Weber <martweb@gmx.net>

	* autotrace.dsp (RSC): Version 0.31.

	* autotrace.vcproj: Ditto.
	
2002-10-23  Martin Weber <martweb@gmx.net>

	* pxl-outline.c (is_valid_dir): 
	removed comment.

	* NEWS: updated.
	
	Message-ID: <21731.1035350777@www20.gmx.net>.
	
2002-10-23  Masatake YAMATO  <yamato@redhat.com>

	* output-pstoedit.c (get_symbolicname) 
	(pstoedit_suffix_table_init): free return
	value of getPstoeditDriverInfo_plainC.
	(get_symbolicname): returned value is strdup'ed.
	(output_pstoedit_writer): free symbolicname.

	* output-pstoedit.[ch]: rewrote code that 
	handles suffix.

	* autotrace.c (at_splines_write): Use output_pstoedit_invoke_writer
	if output_pstoedit_is_writer returns true for output_writer.

	* HACKING: Updated about autotools.

2002-10-22  Masatake YAMATO  <yamato@redhat.com>

	* output-pstoedit.c (remove_temporary_file): Renamed
	from remove_tmpfile.
	(output_pstoedit_writer): Make static.

	* pxl-outline.[ch]: removed unsed ifdefs.

2002-10-22  Martin Weber <martweb@gmx.net>

	* pxl-outline.c: Big changes that fix a bug 
	related to centerline tracing.

2002-10-21  Martin Weber <martweb@gmx.net>

	* input-magick.c: Checked autotrace works with
	ImageMagick-5.5.2.

	Message-ID: <3DB448EA.E3A63661@gmx.net>.

2002-10-20  Masatake YAMATO  <yamato@redhat.com>

	* autogen.sh: checked aclocal-1.4, automake-1.4
	and autoconf-2.53 are available or not.

	* autotrace.h: defined N_ and _ only if they are
	not defined.

2002-10-10  Martin Weber <martweb@gmx.net>

	* autotrace.1: updated again.
